
v1.11.8:
 - BUG FIX: fix panic when detect DNS over TLS traffic
 - Deprecated: the following config options are deprecated:
     - emit_duration in statsd config, use emit_interval instead
     - untrusted_read_limit in server config, use untrusted_read_speed_limit instead
     - tcp_conn_speed_limit/tcp_conn_limit in user config, use tcp_sock_speed_limit instead
     - udp_relay_speed_limit/udp_relay_limit in user config, use udp_sock_speed_limit instead

v1.11.7:
 - BUG FIX: fix read of H2 zero size body frame
 - BUG FIX: fix format of HTTP 1 OPTIONS header line
 - BUG FIX: fix h2 max concurrent streams settings sent to client
 - BUG FIX: fix h2 connection level IDLE check
 - BUG FIX: fix reconnect of syslog unix socket after syslogd restarted
 - Optimization: use more reasonable h2 default settings value
 - Compatibility: support to build on OpenBSD with LibreSSL

v1.11.6:
 - BUG FIX: fix alignment of RawSocketAddr used in recvmmsg & sendmmsg
 - BUG FIX: fix default positive min ttl in c-ares resolver
 - Feature: allow to bind to interface in tcp & udp listen config on supported platforms
 - Feature: update TTL calculation in resolver, cache longer and query earlier
 - Compatibility: drop hickory as a feature flag, it's always enabled now
 - Compatibility: drop package support for Debian 10
 - Optimization: create IDLE ICAP connections more timely
 - Optimization: wait to receive as much as possible preview data for ICAP h1 & h2 reqmod service

v1.11.5:
 - Feature: support easy-proxy Well-Known URI in http-proxy server
 - Feature: allow to match parent domain before do regex match in dst-host acl set rules
 - Feature: allow to do regex match in route_upstream escaper
 - Optimization: update IDLE wheel code to improve performance

v1.11.4:
 - BUG FIX: fix deadlock when reload port servers
 - Feature: allow to quit process on panic
 - Feature: support bind to interface on more platforms when connect
 - Feature: add tls peer closure metrics to escaper